# smithy-qt

./: .bootstrap  .cppcheck.sh  .gitmodules  CMakeLists.txt  README.md  index.html
.github/: dependabot.yaml
.github/workflows/: build.yaml  docs.yaml  static.yaml
doc/: CMakeLists.txt  doxyfile.in
doc/src/internal/: mainpage.md
doc/src/public/: mainpage.md
include/qtsmithy/: idl.h  model.h  qtsmithy_global.h  shape.h  shapeid.h  smithymodel.h
main/cov/: index.html
main/cov/include/qtsmithy/: index.html  model.h.func.html  model.h.gcov.html  shape.h.func.html  shape.h.gcov.html  shapeid.h.func.html  shapeid.h.gcov.html
main/cov/src/app/: generator.cpp.func.html  generator.cpp.gcov.html  generator.h.func.html  generator.h.gcov.html  index.html  (+6 more)
main/doc/: annotated.html  annotated_dup.js  classModel-members.html  classModel.html  classModel.js  classModel_a006b5ee757212e9de1f564ebcdfab91d_cgraph.map  classModel_a006b5ee757212e9de1f564ebcdfab91d_cgraph.md5  classModel_a006b5ee757212e9de1f564ebcdfab91d_icgraph.map  classModel_a006b5ee757212e9de1f564ebcdfab91d_icgraph.md5  classModel_a230e00c458f652c3fa9b447bdd672bdc_cgraph.md5  classModel_a230e00c458f652c3fa9b447bdd672bdc_icgraph.map  classModel_a230e00c458f652c3fa9b447bdd672bdc_icgraph.md5  classModel_a5296da875545acf527ce42c707d1ead1_cgraph.map  classModel_a5296da875545acf527ce42c707d1ead1_cgraph.md5  classModel_a83538d8a8b26113594d14f2b1ea20d8f_cgraph.map  classModel_a83538d8a8b26113594d14f2b1ea20d8f_cgraph.md5  classShape-members.html  classShape.html  classShape.js  classShapeId-members.html  classShapeId.html  classShapeId.js  classShapeId_a380944df9a71c1108ed5bdb459673a49_cgraph.md5  classShapeId_a380944df9a71c1108ed5bdb459673a49_icgraph.md5  classShapeId_a42ae1231e4d242958ab12e61504e33ca_cgraph.map  classShapeId_a42ae1231e4d242958ab12e61504e33ca_cgraph.md5  classShapeId_a42ae1231e4d242958ab12e61504e33ca_icgraph.map  classShapeId_a42ae1231e4d242958ab12e61504e33ca_icgraph.md5  classShapeId_a564f14952b394af6b38f748417a7e48a_cgraph.md5  classShapeId_a564f14952b394af6b38f748417a7e48a_icgraph.md5  classShapeId_a6b207fdb20ccc922e4e2bbbfb9608bbc_cgraph.map  classShapeId_a6b207fdb20ccc922e4e2bbbfb9608bbc_cgraph.md5  classShapeId_a6f1fc0aab99d0108fc3f1eeb5a4d2687_cgraph.map  classShapeId_a6f1fc0aab99d0108fc3f1eeb5a4d2687_cgraph.md5  classShapeId_a6f1fc0aab99d0108fc3f1eeb5a4d2687_icgraph.map  classShapeId_a6f1fc0aab99d0108fc3f1eeb5a4d2687_icgraph.md5  classShapeId_a8aad9a1383c03aee2f33b1568e89f688_icgraph.map  classShapeId_a8aad9a1383c03aee2f33b1568e89f688_icgraph.md5  classShapeId_aad508460b545930c3aeb82021e79de5a_cgraph.md5  classShapeId_aad508460b545930c3aeb82021e79de5a_icgraph.md5  (+100 more)
main/doc/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  enumvalues_1.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_a.js  enumvalues_c.js  files_0.js  files_1.js  files_2.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  (+30 more)
main/int/: annotated.html  annotated_dup.js  classGenerator-members.html  classGenerator.html  classGenerator.js  classGenerator__coll__graph.map  classGenerator__coll__graph.md5  classGenerator_a2acc1aa91219cbd5ec9036569afa560e_cgraph.map  classGenerator_a2acc1aa91219cbd5ec9036569afa560e_cgraph.md5  classGenerator_a32ea485bd5804f2b40e542aeefacb00a_cgraph.map  classGenerator_a32ea485bd5804f2b40e542aeefacb00a_cgraph.md5  classGenerator_a32ea485bd5804f2b40e542aeefacb00a_icgraph.map  classGenerator_a32ea485bd5804f2b40e542aeefacb00a_icgraph.md5  classGenerator_a3ee386f7ccc09947e1c9eedcdc60ee25_cgraph.map  classGenerator_a3ee386f7ccc09947e1c9eedcdc60ee25_icgraph.map  classGenerator_a3ee386f7ccc09947e1c9eedcdc60ee25_icgraph.md5  classGenerator_a5c83551528ea2d2730022e0ad8fcca4c_cgraph.map  classGenerator_a5c83551528ea2d2730022e0ad8fcca4c_icgraph.map  classGenerator_a5c83551528ea2d2730022e0ad8fcca4c_icgraph.md5  classGenerator_a8f048398850e7c5c5e7d7a1af71de172_cgraph.map  classGenerator_a8f048398850e7c5c5e7d7a1af71de172_cgraph.md5  classGenerator_a8f048398850e7c5c5e7d7a1af71de172_icgraph.map  classGenerator_aaa1d9f88da53cc5be8e720cf7e23c548_cgraph.md5  classGenerator_aaa1d9f88da53cc5be8e720cf7e23c548_icgraph.md5  classGenerator_ab361ff0bfa96dfbd44afaecc2c4fb852_cgraph.map  classGenerator_ab361ff0bfa96dfbd44afaecc2c4fb852_cgraph.md5  classGenerator_ad25c47d02c75979ab6d21b8bf75b958e_cgraph.map  classGenerator_ad25c47d02c75979ab6d21b8bf75b958e_cgraph.md5  classModel-members.html  classModel.html  classModel.js  classModelPrivate-members.html  classModelPrivate.html  classModelPrivate.js  classModelPrivate__coll__graph.map  classModelPrivate__coll__graph.md5  classModel__coll__graph.map  classModel__coll__graph.md5  classModel_a006b5ee757212e9de1f564ebcdfab91d_cgraph.map  classModel_a006b5ee757212e9de1f564ebcdfab91d_cgraph.md5  (+254 more)
main/int/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_8.js  enumvalues_9.js  enumvalues_b.js  files_0.js  files_2.js  (+32 more)
src/: CMakeLists.txt
src/app/: CMakeLists.txt  desktop.in  generator.cpp  generator.h  main.cpp  renderer.cpp  renderer.h  textlee.h
src/lib/: CMakeLists.txt  idl.cpp  model.cpp  model_p.h  shape.cpp  shape_p.h  shapeid.cpp  shapeid_p.h  smithymodel.cpp  smithymodel_p.h
test/: CMakeLists.txt  removeHtmlDates.sh.in
test/unit/: CMakeLists.txt  testidl.cpp  testidl.h  testshapeid.cpp  testshapeid.h
test/unit/app/: CMakeLists.txt
test/unit/lib/: CMakeLists.txt  testshapeid.cpp  testshapeid.h
(+12 files in other folders)
